gccida/g2/reg_overlap_mentioned_p
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reg_overlap_mentioned_p/src/rtlanal.c:1926:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v11.rtwint = ( __int64)rtx->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reg_overlap_mentioned_p/src/rtlanal.c:1934:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( v11.rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reg_overlap_mentioned_p/src/rtlanal.c:1936:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)rtx + 2)) 
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reg_overlap_mentioned_p/src/rtlanal.c:1946:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v12 = ( ( unsigned int)( mode_class_0[v19] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reg_overlap_mentioned_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reg_overlap_mentioned_p/src/obj/rtlanal.o] Error 1
